# Galois-docs

./: CMakeLists.txt  Doxyfile.in  README.md  conf.py  index.rst
cmake/Modules/: FindSphinx.cmake
doxygen/: glossary.md  manual.dox
doxygen/manual/: distributed.dox  scheduler.dox
sphinx/: getting_started.rst  glossary.rst  manual.rst
sphinx/manual/: concurrent_data_structures.rst  graph_io_util.rst  introduction.rst  mem_allocator.rst  numa.rst  output_stat.rst  parallel_loops.rst  profiling.rst  reduction.rst  scheduler.rst  thread_local_storage.rst  tuning.rst  your_own_ds.rst
